add li,a, box, and html content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
   <title>W1-Friday-prortfolio</title>
 </head>
 <body>
-  <div>
+<div class="container">
   <h1><strong>Andrew Macauley</strong></h1> 
   <h3> <img src="5FF3B8D4-45FE-4928-833C-724C17AC3AD5.JPG" alt="picture of Andrew"></h3> </div>
-  <div>
+  <h2> <em>List of Andrew's projects</em> </h2>
+</div>
+  <div class="box1">
+  <ul>
+    <li> <a href="https://github.com/Drewmacauley/Wikipedia.git">Wikipedia</a></li> 
+    <p>We learned how to recreate a Wikipedia page. In the process of recreating we used css, col, box, div, span, floats, bootstrap.</p> 
+  </div>
+  <div class="box1">
+    <li> <a href="https://github.com/Drewmacauley/cupcake-shop.git">Cupcake-shop</a></li>
+    <p>We learned to use CSS, and readme.</p>
+   </div> 
+    <div class="box1">
+    <li> <a href="https://github.com/Drewmacauley/paragraphs-project.git>paragraphs-prject">Paragraphs-project</a></li>
+    <p>We learned how to use div, spans, floats.</p>
+    </div>
