add more html links

--- a/index.html
+++ b/index.html
@@ -25,3 +25,19 @@
     <li> <a href="https://github.com/Drewmacauley/paragraphs-project.git>paragraphs-prject">Paragraphs-project</a></li>
     <p>We learned how to use div, spans, floats.</p>
     </div>
+    <div class="box1">
+      <li> <a href="https://github.com/Drewmacauley/Branching-test-project.git">Branching-test-project</a></li>
+      <p>We learned to use git branching and merging.</p>
+      </div>
+      <div class="box1">
+      <li> <a href="https://github.com/Drewmacauley/my-first-webpage-1.git">My-first-webpage</a></li>
+      <p>We learned how to create our first webpage using HTML, and CSS.</p>
+      </div>
+      <div class="box1">
+      <li> <a href="https://github.com/Drewmacauley/Cookie-Recipe-.git">cookie-recipe</a></li>
+      <p>We used more CSS styling for this project.</p>
+      </div>
+      <div class="box1">
+      <li> <a href="https://github.com/Drewmacauley/hello-world.git>hello-world">hello-world</a></li>
+      <p>We learned how to use Github and use repositories.</p>
+      </div>
