--- a/index.html
+++ b/index.html
@@ -41,3 +41,7 @@
       <li> <a href="https://github.com/Drewmacauley/hello-world.git>hello-world">hello-world</a></li>
       <p>We learned how to use Github and use repositories.</p>
       </div>
+    </div>
+    <h3><em>About Me</em></h3>
+  <div class="my-class">
+    <p>After graduating high school, I went to <span> college of the Siskiyou’s </span>for 1 year.  I then transferred schools to <span> Central Oregon Community College</span> for another year. I studied abroad in Spain for a term as well.  I jumped into a sales position for a smaller telecommunications company, where I spent the next 6 years.  During this time I moved into a sales manager role.  I decided to change my career path, and took a job in the oil field in the Alaska.  I spent the next 6 years in the oil field.  I started as a general maintenance tech, then moved into a equipment operator position.  I finished up my employment there as a lead where I ran a crew of 4-10 people on daily projects. I now turned to Epicodus to build my skill set into coding.  I have always like to keep a balance of field work and technology.  While I enjoyed my last 6 years in the Arctic ocean, I am excited to start a new career path in coding(also will enjoy some warmer weather.)  
