--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <h1><strong>Andrew Macauley</strong></h1> 
-  <h3> <img src="5FF3B8D4-45FE-4928-833C-724C17AC3AD5.JPG" alt="picture of Andrew"></h3> 
+  <h3> <img src="Drew pic" alt="picture of Andrew"></h3> 
 </div>
   <h2> <em>List of Andrew's projects</em> </h2>
   <div class="box1">
