--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>W1-Friday-prortfolio</title>
 </head>
 <body>
-<div class="container">
+<div class="container" class=>
   <h1><strong>Andrew Macauley</strong></h1> 
   <h3> <img src="Drew pic" alt="picture of Andrew"></h3> 
 </div>
