--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 <div class="container" class=>
   <h1><strong>Andrew Macauley</strong></h1> 
-  <h3> <img src="Drew pic" alt="picture of Andrew"></h3> 
 </div>
   <h2> <em>List of Andrew's projects</em> </h2>
   <div class="box1">
@@ -44,7 +43,7 @@
     </div>
     <h3><em>About Me</em></h3>
   <div class="my-class">
-    <p>After graduating high school, I went to <span> college of the Siskiyou’s </span>for 1 year.  I then transferred schools to <span> Central Oregon Community College</span> for another year. I studied abroad in Spain for a term as well.  I jumped into a sales position for a smaller telecommunications company, where I spent the next 6 years.  During this time I moved into a sales manager role.  I decided to change my career path, and took a job in the oil field in the Alaska.  I spent the next 6 years in the oil field.  I started as a general maintenance tech, then moved into a equipment operator position.  I finished up my employment there as a lead where I ran a crew of 4-10 people on daily projects. I now turned to Epicodus to build my skill set into coding.  I have always like to keep a balance of field work and technology.  While I enjoyed my last 6 years in the Arctic ocean, I am excited to start a new career path in coding(also will enjoy some warmer weather.) Living in Portland, I have enjoyed going out to many fantastic restaurant’s.  I love going out to blazer or winter Hawks games, or just watching sports in general. I spend a lot of my free time taking trips with the wife or I will be out playing on the golf course.</p>
+    <p><h3> <img src="https://drive.google.com/file/d/1dm4llHNrdTnUOp0L57m2rjVsta41ncpv/view?usp=sharing" alt="picture of Andrew"></h3> After graduating high school, I went to <span> college of the Siskiyou’s </span>for 1 year.  I then transferred schools to <span> Central Oregon Community College</span> for another year. I studied abroad in Spain for a term as well.  I jumped into a sales position for a smaller telecommunications company, where I spent the next 6 years.  During this time I moved into a sales manager role.  I decided to change my career path, and took a job in the oil field in the Alaska.  I spent the next 6 years in the oil field.  I started as a general maintenance tech, then moved into a equipment operator position.  I finished up my employment there as a lead where I ran a crew of 4-10 people on daily projects. I now turned to Epicodus to build my skill set into coding.  I have always like to keep a balance of field work and technology.  While I enjoyed my last 6 years in the Arctic ocean, I am excited to start a new career path in coding(also will enjoy some warmer weather.) Living in Portland, I have enjoyed going out to many fantastic restaurant’s.  I love going out to blazer or winter Hawks games, or just watching sports in general. I spend a lot of my free time taking trips with the wife or I will be out playing on the golf course.</p>
   </div>
     <div class="box2">
     <h3>Top 3 favorite restaurants in Portland</h3> 
