--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <div class="box1">
     <ul><li> <a href="https://github.com/Drewmacauley/cupcake-shop.git">Cupcake-shop</a></li></ul> 
     <p>We learned to use CSS, and readme.</p>
-   </div> 
+  </div> 
     <div class="box1">
-    <ul><li> <a href="https://github.com/Drewmacauley/paragraphs-project.git>paragraphs-prject">Paragraphs-project</a></li></ul> 
-    <p>We learned how to use div, spans, floats.</p>
+      <ul><li> <a href="https://github.com/Drewmacauley/paragraphs-project.git>paragraphs-prject">Paragraphs-project</a></li></ul> 
+      <p>We learned how to use div, spans, floats.</p>
     </div>
     <div class="box1">
       <ul><li> <a href="https://github.com/Drewmacauley/Branching-test-project.git">Branching-test-project</a></li></ul> 
@@ -33,21 +33,20 @@
       </div>
       <div class="box1">
         <ul><li> <a href="https://github.com/Drewmacauley/Cookie-Recipe-.git">cookie-recipe</a></li></ul> 
-      <p>We used more CSS styling for this project.</p>
+        <p>We used more CSS styling for this project.</p>
       </div>
       <div class="box1">
-      <ul><li> <a href="https://github.com/Drewmacauley/hello-world.git>hello-world">hello-world</a></li></ul> 
-      <p>We learned how to use Github and use repositories.</p>
+        <ul><li> <a href="https://github.com/Drewmacauley/hello-world.git">hello-world</a></li></ul> 
+        <p>We learned how to use Github and use repositories.</p>
       </div>
-    </div>
-    <h3><em>About Me</em></h3>
+        <h3><em>About Me</em></h3>
   <div class="my-class">
     <p><h3> <img src="img/Drew pic.png" alt="picture of Andrew"></h3> After graduating high school, I went to <span> college of the Siskiyou’s </span>for 1 year.  I then transferred schools to <span> Central Oregon Community College</span> for another year. I studied abroad in Spain for a term as well.  I jumped into a sales position for a smaller telecommunications company, where I spent the next 6 years.  During this time I moved into a sales manager role.  I decided to change my career path, and took a job in the oil field in the Alaska.  I spent the next 6 years in the oil field.  I started as a general maintenance tech, then moved into a equipment operator position.  I finished up my employment there as a lead where I ran a crew of 4-10 people on daily projects. I now turned to Epicodus to build my skill set into coding.  I have always like to keep a balance of field work and technology.  While I enjoyed my last 6 years in the Arctic ocean, I am excited to start a new career path in coding(also will enjoy some warmer weather.) Living in Portland, I have enjoyed going out to many fantastic restaurant’s.  I love going out to blazer or winter Hawks games, or just watching sports in general. I spend a lot of my free time taking trips with the wife or I will be out playing on the golf course.</p>
   </div>
     <div class="box2">
       <h3>Top 3 favorite restaurants in Portland</h3> 
       <Li>
-      ><ol>Fire on the Mountain</ol>
+      <ol>Fire on the Mountain</ol>
       <ol>PDX Sliders</ol>
       <ol>Oven & Shaker</ol></Li>
     </div>
